creating css to fix image too big at post page

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 250px;
-  background-color: #EDF3F6;
+  height: 120px;
+  background-color: #e5e5e5;
 }
