--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -40,3 +40,10 @@ h1 {
   box-shadow: 0px 1px 7px -1px #000;
   padding: 20px 20px 2px 20px;
 }
+
+img {
+  border: 1px solid #252525;
+  width: 100%;
+  height: 60%;
+  border-radius: 4px;
+}
