--- a/src/pages/Post/Post.module.css
+++ b/src/pages/Post/Post.module.css
@@ -6,6 +6,10 @@
   margin-bottom: 0.2em;
 }
 
+.post_container p {
+  margin-bottom: 3em;
+}
+
 .post_container .tags {
   display: flex;
   justify-content: center;
@@ -19,14 +23,22 @@
   font-weight: bold;
 }
 
-img {
+.post_image {
   border: 1px solid #252525;
-  width: 100%;
-  height: 60%;
+  width: 40%;
+  height: 40%;
   border-radius: 4px;
 }
 
 .post_center {
   border-radius: 5px;
   margin: 20px 20px 2px 20px;
+}
+
+.back {
+  font-size: 1em;
+  position: absolute;
+  left: 80%;
+  top: 10%;
+  margin-top: 3em;
 }
